test/TestPhases/namecheck/valid/XoverrideClassArg.blc
module


ref struct X
    var x: int8 = 0
extension
    activity X(this: X)()
        var x: int8 = 0
    end
end
