test/TestPhases/namecheck/invalid/XClassShadow.blc
module


ref struct x
extension
    activity x()()
        var x: int8 = 0
    end
end

ref struct x
extension
    activity x()()
        var x: int8 = 0
    end
end
